Revision history for Dist-Zilla-PluginBundle-CJM

0.02   NOT
	- Added POD tests

	Dist::Zilla::Plugin::GitVersionCheckCJM
	  - New plugin

	Dist::Zilla::Plugin::PodLoom
	  - Define abstract, module, & version only if they
	    could be determined

	Dist::Zilla::Plugin::TemplateCJM
	  - Also process comments that start at beginning of line

0.01   October 11, 2009
	- Initial release includes:
	    Dist::Zilla::Plugin::PodLoom
	    Dist::Zilla::Plugin::TemplateCJM
	    Dist::Zilla::Plugin::VersionFromModule
	    Dist::Zilla::Role::ModuleInfo